--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Daisy UI + Tailwind CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+    <!-- Adding "Poppins" font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Adding Extra Things -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              text1: "#00303C",
+              text2: "#000000",
+              btn_color: "#3752FD",
+              bg_cl: "#F4F7FF",
+              white: "#FFFFFF",
+            },
+            fontFamily: {
+              Poppins: ["Poppins", "serif"],
+            },
+            borderRadius: {
+              custom1: "32px",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body>
-    <h2>hello world</h2>
+  <body class="bg-bg_cl font-Poppins text-text1">
+    <nav
+      class="w-8/10 mx-auto bg-white flex items-center justify-between p-6 rounded-2xl my-6"
+    >
+      <div class="flex items-center gap-4">
+        <img src="assets/logo.png" alt="" />
+        <div class="text-4xl">Dev<span class="font-bold">Board</span></div>
+      </div>
+      <div class="flex items-center gap-8">
+        <div class="flex items-center gap-4 bg-bg_cl px-4 py-2 rounded-custom1">
+          <img src="assets/checkbox.png" alt="" />
+          <div class="text-3xl font-bold">23</div>
+        </div>
+
+        <button class="p-2 bg-bg_cl rounded-full">
+          <img src="assets/theme-btn.png" alt="" />
+        </button>
+      </div>
+    </nav>
   </body>
 </html>
