--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         },
       };
     </script>
+
+    <!-- Adding Extra CSS -->
+    <style>
+      .gradient_bg {
+        background: linear-gradient(to bottom right, #3752fd, #6c7ffa, #9ba8f8);
+      }
+    </style>
   </head>
   <body class="bg-bg_cl font-Poppins text-text1">
     <nav
@@ -63,5 +70,59 @@
         </button>
       </div>
     </nav>
+
+    <main>
+      <div class="flex gap-4 w-8/10 mx-auto">
+        <div class="flex-3 bg-white p-6 rounded-2xl">
+          <div class="flex justify-between gap-6">
+            <div
+              class="flex flex-1 bg-bg_cl rounded-xl justify-center items-center p-4 gap-4"
+            >
+              <div class="p-4 bg-white rounded-full">
+                <img src="assets/checkbox.png" alt="" />
+              </div>
+              <div>
+                <p class="font-medium">Task Assigned </p>
+                <p class="text-3xl font-bold">05</p>
+              </div>
+            </div>
+            <div
+              class="flex flex-2 gap-6 rounded-xl justify-start items-center p-6 gradient_bg"
+            >
+              <div><img src="assets/board.png" alt="" /></div>
+              <p class="text-white text-2xl">
+                Discover Something <br />
+                New Today!
+              </p>
+            </div>
+            <div
+              class="flex flex-1 bg-bg_cl rounded-xl justify-center items-center p-4 gap-4"
+            >
+              <div class="p-4 bg-white rounded-full">
+                <img src="assets/calender.png" alt="" />
+              </div>
+              <div>
+                <p class="text-xl">Wed ,</p>
+                <p class="text-xl font-bold">Jul 28 2025</p>
+              </div>
+            </div>
+          </div>
+          <div></div>
+        </div>
+        <div class="flex-1 bg-white rounded-2xl">
+          <div class="flex flex-col items-center py-12 gap-4">
+            <div class="flex gap-4">
+              <div><img src="assets/activity.png" alt="" /></div>
+              <div class="text-xl font-medium">Activity Log</div>
+            </div>
+            <div>
+              <button class="btn font-medium bg-btn_color text-white text-base">
+                Clear History
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
