--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               btn_color: "#3752FD",
               bg_cl: "#F4F7FF",
               white: "#FFFFFF",
+              text3: "rgba(0, 0, 0, 0.5)",
             },
             fontFamily: {
               Poppins: ["Poppins", "serif"],
@@ -49,32 +50,41 @@
       .gradient_bg {
         background: linear-gradient(to bottom right, #3752fd, #6c7ffa, #9ba8f8);
       }
+
+      * {
+        padding: 0px;
+        margin: 0px;
+      }
     </style>
   </head>
   <body class="bg-bg_cl font-Poppins text-text1">
-    <nav
-      class="w-8/10 mx-auto bg-white flex items-center justify-between p-6 rounded-2xl my-6"
-    >
-      <div class="flex items-center gap-4">
-        <img src="assets/logo.png" alt="" />
-        <div class="text-4xl">Dev<span class="font-bold">Board</span></div>
-      </div>
-      <div class="flex items-center gap-8">
-        <div class="flex items-center gap-4 bg-bg_cl px-4 py-2 rounded-custom1">
-          <img src="assets/checkbox.png" alt="" />
-          <div class="text-3xl font-bold">23</div>
+    <div class="py-6">
+      <nav
+        class="md:w-8/10 w-9/10 mx-auto bg-white flex items-center justify-between md:p-6 p-2 rounded-2xl"
+      >
+        <div class="flex items-center gap-4">
+          <img src="assets/logo.png" alt="" />
+          <div class="text-4xl">Dev<span class="font-bold">Board</span></div>
         </div>
+        <div class="flex items-center gap-8">
+          <div
+            class="md:flex items-center gap-4 bg-bg_cl px-4 py-2 rounded-custom1 hidden"
+          >
+            <img src="assets/checkbox.png" alt="" />
+            <div class="text-3xl font-bold">23</div>
+          </div>
 
-        <button class="p-2 bg-bg_cl rounded-full">
-          <img src="assets/theme-btn.png" alt="" />
-        </button>
-      </div>
-    </nav>
+          <button class="p-2 bg-bg_cl rounded-full">
+            <img src="assets/theme-btn.png" alt="" />
+          </button>
+        </div>
+      </nav>
+    </div>
 
     <main>
-      <div class="flex gap-4 w-8/10 mx-auto">
-        <div class="flex-3 bg-white p-6 rounded-2xl">
-          <div class="flex justify-between gap-6">
+      <div class="flex xl:flex-row flex-col gap-6 md:w-8/10 w-9/10 mx-auto">
+        <div class="flex-3 bg-white md:px-6 px-2 py-6 rounded-2xl">
+          <div class="flex flex-col md:flex-row justify-between md:gap-6 gap-2">
             <div
               class="flex flex-1 bg-bg_cl rounded-xl justify-center items-center p-4 gap-4"
             >
@@ -107,7 +117,157 @@
               </div>
             </div>
           </div>
-          <div></div>
+
+          <div
+            class="border-b border-dotted border-text3 w-full h-0 my-10"
+          ></div>
+          <div
+            class="grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8 my-4"
+          >
+            <!-- card 1 -->
+            <div class="bg-bg_cl flex flex-col gap-4 p-6 rounded-2xl">
+              <div>
+                <button class="btn bg-white border-none">ShopEase</button>
+              </div>
+              <h3 class="text-2xl font-medium">Fix Mobile Button Issue</h3>
+              <p class="text-text3 bg-white p-4 rounded-lg">
+                Debug using Chrome DevTools, check for overlapping elements, and
+                ensure onClick works properly and ensure onClick works properly
+              </p>
+              <div class="border-b border-dotted border-text3 w-full h-0"></div>
+              <div class="flex justify-between">
+                <div>
+                  <p class="text-sm">Deadline</p>
+                  <p class="font-medium">21 March 2025</p>
+                </div>
+                <div>
+                  <button class="btn bg-btn_color text-white font-medium">
+                    Completed
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- card 2 -->
+            <div class="bg-bg_cl flex flex-col gap-4 p-6 rounded-2xl">
+              <div>
+                <button class="btn bg-white border-none">ShopEase</button>
+              </div>
+              <h3 class="text-2xl font-medium">Fix Mobile Button Issue</h3>
+              <p class="text-text3 bg-white p-4 rounded-lg">
+                Debug using Chrome DevTools, check for overlapping elements, and
+                ensure onClick works properly and ensure onClick works properly
+              </p>
+              <div class="border-b border-dotted border-text3 w-full h-0"></div>
+              <div class="flex justify-between">
+                <div>
+                  <p class="text-sm">Deadline</p>
+                  <p class="font-medium">21 March 2025</p>
+                </div>
+                <div>
+                  <button class="btn bg-btn_color text-white font-medium">
+                    Completed
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- card 3 -->
+            <div class="bg-bg_cl flex flex-col gap-4 p-6 rounded-2xl">
+              <div>
+                <button class="btn bg-white border-none">ShopEase</button>
+              </div>
+              <h3 class="text-2xl font-medium">Fix Mobile Button Issue</h3>
+              <p class="text-text3 bg-white p-4 rounded-lg">
+                Debug using Chrome DevTools, check for overlapping elements, and
+                ensure onClick works properly and ensure onClick works properly
+              </p>
+              <div class="border-b border-dotted border-text3 w-full h-0"></div>
+              <div class="flex justify-between">
+                <div>
+                  <p class="text-sm">Deadline</p>
+                  <p class="font-medium">21 March 2025</p>
+                </div>
+                <div>
+                  <button class="btn bg-btn_color text-white font-medium">
+                    Completed
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- card 4 -->
+            <div class="bg-bg_cl flex flex-col gap-4 p-6 rounded-2xl">
+              <div>
+                <button class="btn bg-white border-none">ShopEase</button>
+              </div>
+              <h3 class="text-2xl font-medium">Fix Mobile Button Issue</h3>
+              <p class="text-text3 bg-white p-4 rounded-lg">
+                Debug using Chrome DevTools, check for overlapping elements, and
+                ensure onClick works properly and ensure onClick works properly
+              </p>
+              <div class="border-b border-dotted border-text3 w-full h-0"></div>
+              <div class="flex justify-between">
+                <div>
+                  <p class="text-sm">Deadline</p>
+                  <p class="font-medium">21 March 2025</p>
+                </div>
+                <div>
+                  <button class="btn bg-btn_color text-white font-medium">
+                    Completed
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- card 5 -->
+            <div class="bg-bg_cl flex flex-col gap-4 p-6 rounded-2xl">
+              <div>
+                <button class="btn bg-white border-none">ShopEase</button>
+              </div>
+              <h3 class="text-2xl font-medium">Fix Mobile Button Issue</h3>
+              <p class="text-text3 bg-white p-4 rounded-lg">
+                Debug using Chrome DevTools, check for overlapping elements, and
+                ensure onClick works properly and ensure onClick works properly
+              </p>
+              <div class="border-b border-dotted border-text3 w-full h-0"></div>
+              <div class="flex justify-between">
+                <div>
+                  <p class="text-sm">Deadline</p>
+                  <p class="font-medium">21 March 2025</p>
+                </div>
+                <div>
+                  <button class="btn bg-btn_color text-white font-medium">
+                    Completed
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- card 6 -->
+            <div class="bg-bg_cl flex flex-col gap-4 p-6 rounded-2xl">
+              <div>
+                <button class="btn bg-white border-none">ShopEase</button>
+              </div>
+              <h3 class="text-2xl font-medium">Fix Mobile Button Issue</h3>
+              <p class="text-text3 bg-white p-4 rounded-lg">
+                Debug using Chrome DevTools, check for overlapping elements, and
+                ensure onClick works properly and ensure onClick works properly
+              </p>
+              <div class="border-b border-dotted border-text3 w-full h-0"></div>
+              <div class="flex justify-between">
+                <div>
+                  <p class="text-sm">Deadline</p>
+                  <p class="font-medium">21 March 2025</p>
+                </div>
+                <div>
+                  <button class="btn bg-btn_color text-white font-medium">
+                    Completed
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="flex-1 bg-white rounded-2xl">
           <div class="flex flex-col items-center py-12 gap-4">
