--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             class="md:flex items-center gap-4 bg-bg_cl px-4 py-2 rounded-custom1 hidden"
           >
             <img src="assets/checkbox.png" alt="" />
-            <div class="text-3xl font-bold">23</div>
+            <div id="score" class="text-3xl font-bold">23</div>
           </div>
 
           <button class="p-2 bg-bg_cl rounded-full">
@@ -92,8 +92,8 @@
                 <img src="assets/checkbox.png" alt="" />
               </div>
               <div>
-                <p class="font-medium">Task Assigned </p>
-                <p class="text-3xl font-bold">05</p>
+                <p class="font-medium">Task Assigned</p>
+                <p id="task_left" class="text-3xl font-bold">6</p>
               </div>
             </div>
             <div
@@ -141,7 +141,9 @@
                   <p class="font-medium">21 March 2025</p>
                 </div>
                 <div>
-                  <button class="btn bg-btn_color text-white font-medium">
+                  <button
+                    class="btn bg-btn_color text-white font-medium main_btn"
+                  >
                     Completed
                   </button>
                 </div>
@@ -165,7 +167,9 @@
                   <p class="font-medium">21 March 2025</p>
                 </div>
                 <div>
-                  <button class="btn bg-btn_color text-white font-medium">
+                  <button
+                    class="btn bg-btn_color text-white font-medium main_btn"
+                  >
                     Completed
                   </button>
                 </div>
@@ -189,7 +193,9 @@
                   <p class="font-medium">21 March 2025</p>
                 </div>
                 <div>
-                  <button class="btn bg-btn_color text-white font-medium">
+                  <button
+                    class="btn bg-btn_color text-white font-medium main_btn"
+                  >
                     Completed
                   </button>
                 </div>
@@ -213,7 +219,9 @@
                   <p class="font-medium">21 March 2025</p>
                 </div>
                 <div>
-                  <button class="btn bg-btn_color text-white font-medium">
+                  <button
+                    class="btn bg-btn_color text-white font-medium main_btn"
+                  >
                     Completed
                   </button>
                 </div>
@@ -237,7 +245,9 @@
                   <p class="font-medium">21 March 2025</p>
                 </div>
                 <div>
-                  <button class="btn bg-btn_color text-white font-medium">
+                  <button
+                    class="btn bg-btn_color text-white font-medium main_btn"
+                  >
                     Completed
                   </button>
                 </div>
@@ -261,7 +271,9 @@
                   <p class="font-medium">21 March 2025</p>
                 </div>
                 <div>
-                  <button class="btn bg-btn_color text-white font-medium">
+                  <button
+                    class="btn bg-btn_color text-white font-medium main_btn"
+                  >
                     Completed
                   </button>
                 </div>
@@ -281,8 +293,22 @@
               </button>
             </div>
           </div>
+          <div
+            class="border-b border-dotted border-text3 w-full h-0 mb-4"
+          ></div>
+          <div>
+            <p class="w-8/10 mx-auto bg-bg_cl p-2 text-text3 rounded-lg my-2">
+              You have Complete The Task Add Dark Mode at 12:48:15 PM
+            </p>
+            <p class="w-8/10 mx-auto bg-bg_cl p-2 text-text3 rounded-lg my-4">
+              You have Complete The Task Add Dark Mode at 12:48:15 PM
+            </p>
+          </div>
         </div>
       </div>
     </main>
+
+    <script src="java/btn.js"></script>
+    <script src="java/helpFuc.js"></script>
   </body>
 </html>
