--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div id="score" class="text-3xl font-bold">23</div>
           </div>
 
-          <button class="p-2 bg-bg_cl rounded-full">
+          <button id="color_change_btn" class="p-2 bg-bg_cl rounded-full">
             <img src="assets/theme-btn.png" alt="" />
           </button>
         </div>
