Adding Main Page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>index page</title>
     <!-- Daisy UI + Tailwind CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css"
@@ -97,6 +97,7 @@
               </div>
             </div>
             <div
+              id="discover_btn"
               class="flex flex-2 gap-6 rounded-xl justify-start items-center p-6 gradient_bg"
             >
               <div><img src="assets/board.png" alt="" /></div>
