--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <body class="bg-bg_cl font-Poppins text-text1 pb-10">
     <div class="py-6">
       <nav
-        class="md:w-8/10 w-9/10 mx-auto bg-white flex items-center justify-between md:p-6 p-2 rounded-2xl"
+        class="w-9/10 mx-auto bg-white flex items-center justify-between md:p-6 p-2 rounded-2xl"
       >
         <div class="flex items-center gap-4">
           <img src="assets/logo.png" alt="" />
@@ -82,7 +82,7 @@
     </div>
 
     <main>
-      <div class="flex xl:flex-row flex-col gap-6 md:w-8/10 w-9/10 mx-auto">
+      <div class="flex xl:flex-row flex-col gap-6 w-9/10 mx-auto">
         <div class="flex-3 bg-white md:px-6 px-2 py-6 rounded-2xl">
           <div class="flex flex-col md:flex-row justify-between md:gap-6 gap-2">
             <div
