--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <div>
                 <button class="btn bg-white border-none">ShopEase</button>
               </div>
-              <h3 class="text-2xl font-medium">Fix Mobile Button Issue</h3>
+              <h3 class="text-xl font-medium">Fix Mobile Button Issue</h3>
               <p class="text-text3 bg-white p-4 rounded-lg">
                 Debug using Chrome DevTools, check for overlapping elements, and
                 ensure onClick works properly and ensure onClick works properly
@@ -156,7 +156,7 @@
               <div>
                 <button class="btn bg-white border-none">ShopEase</button>
               </div>
-              <h3 class="text-2xl font-medium">Add Dark Mode</h3>
+              <h3 class="text-xl font-medium">Add Dark Mode</h3>
               <p class="text-text3 bg-white p-4 rounded-lg">
                 Debug using Chrome DevTools, check for overlapping elements, and
                 ensure onClick works properly and ensure onClick works properly
@@ -182,7 +182,7 @@
               <div>
                 <button class="btn bg-white border-none">ShopEase</button>
               </div>
-              <h3 class="text-2xl font-medium">Optimize Home page </h3>
+              <h3 class="text-xl font-medium">Optimize Home page </h3>
               <p class="text-text3 bg-white p-4 rounded-lg">
                 Debug using Chrome DevTools, check for overlapping elements, and
                 ensure onClick works properly and ensure onClick works properly
@@ -208,7 +208,7 @@
               <div>
                 <button class="btn bg-white border-none">ShopEase</button>
               </div>
-              <h3 class="text-2xl font-medium">Add new emoji 🤲</h3>
+              <h3 class="text-xl font-medium">Add new emoji 🤲</h3>
               <p class="text-text3 bg-white p-4 rounded-lg">
                 Debug using Chrome DevTools, check for overlapping elements, and
                 ensure onClick works properly and ensure onClick works properly
@@ -234,7 +234,7 @@
               <div>
                 <button class="btn bg-white border-none">ShopEase</button>
               </div>
-              <h3 class="text-2xl font-medium">Integrate OpenAI API</h3>
+              <h3 class="text-xl font-medium">Integrate OpenAI API</h3>
               <p class="text-text3 bg-white p-4 rounded-lg">
                 Debug using Chrome DevTools, check for overlapping elements, and
                 ensure onClick works properly and ensure onClick works properly
@@ -260,7 +260,7 @@
               <div>
                 <button class="btn bg-white border-none">ShopEase</button>
               </div>
-              <h3 class="text-2xl font-medium">FImprove Job searching</h3>
+              <h3 class="text-xl font-medium">FImprove Job searching</h3>
               <p class="text-text3 bg-white p-4 rounded-lg p_btn">
                 Debug using Chrome DevTools, check for overlapping elements, and
                 ensure onClick works properly and ensure onClick works properly
